Change links to index.html into /

--- a/reprozip-dev-job.html
+++ b/reprozip-dev-job.html
@@ -39,13 +39,13 @@
 
     <nav class="navbar navbar-expand-md navbar-inverse bg-inverse">
       <div class="container">
-        <a class="navbar-brand" href="#"><img alt="ReproZip" src="imgs/navbar-logo.png"></a>
+        <a class="navbar-brand" href="/"><img alt="ReproZip" src="imgs/navbar-logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
           <ul class="navbar-nav mr-auto">
 
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 
             <!--ABOUT DROP DOWN-->
             <li class="nav-item dropdown">
