Link to files on master rather than 1.0.x

--- a/about.html
+++ b/about.html
@@ -210,7 +210,7 @@
         <br/>
         <div id="contribute"><h2>Contribute to ReproZip!</h2></div>
 
-        <p>If you'd like to contribute to the development of ReproZip, please read our <a href="https://github.com/VIDA-NYU/reprozip/blob/1.0.x/CONTRIBUTING.md">CONTRIBUTING.md</a> file in the ReproZip GitHub repository. Please note we also have a <a href="https://github.com/VIDA-NYU/reprozip/blob/1.0.x/CODE_OF_CONDUCT.md">CODE_OF_CONDUCT.md</a> which we ask contributors and maintainers abide by.</p>
+        <p>If you'd like to contribute to the development of ReproZip, please read our <a href="https://github.com/VIDA-NYU/reprozip/blob/master/CONTRIBUTING.md">CONTRIBUTING.md</a> file in the ReproZip GitHub repository. Please note we also have a <a href="https://github.com/VIDA-NYU/reprozip/blob/master/CODE_OF_CONDUCT.md">CODE_OF_CONDUCT.md</a> which we ask contributors and maintainers abide by.</p>
 
         <p>We have a number of GitHub issues tagged as <a href="https://github.com/VIDA-NYU/reprozip/issues?q=is%3Aopen+is%3Aissue+label%3A%22A-help+wanted%22">help-wanted</a>, <a href="https://github.com/VIDA-NYU/reprozip/issues?q=is%3Aopen+is%3Aissue+label%3AA-question">question</a>, and <a href="https://github.com/VIDA-NYU/reprozip/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22">good-first-issue</a>. We are hoping that organizing the issues this way will encourage folks of all levels to participate to the development of ReproZip, from those who contribute through discussion around questions, newcomers looking for a good first issue to work on, and developers comfortable looking through a project to write code back.</p>
 
