moved examples to main navbar

--- a/reprozip-dev-job.html
+++ b/reprozip-dev-job.html
@@ -52,9 +52,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="about.html">What is ReproZip?</a>
-                <a class="dropdown-item" href="https://docs.reprozip.org/">Docs <i class="fas fa-external-link-alt"></i></a>
-                <a class="dropdown-item" href="https://examples.reprozip.org/">Examples <i class="fas fa-external-link-alt"></i></a>
-              </div>
+                <a class="dropdown-item" href="https://docs.reprozip.org/">Docs <i class="fas fa-external-link-alt"></i></a>              </div>
             </li><!--end about dropdown-->
 
             <li class="nav-item"><a class="nav-link" href="schol.html">Scholarship</a></li>
@@ -87,6 +85,8 @@
                 </li>
               </ul>
             </li><!--end installers dropdown-->
+        
+          <li class="nav-item"><a class="nav-link" href="https://examples.reprozip.org/">Examples <i class="fas fa-external-link-alt"></i></a></li>
 
           </ul><!--end left navbar-->
           <!-- right navbar -->
