--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
 
         <p>ReproZip is an open source tool that helps users make their work completely reproducible. ReproZip can be used to reproduce a plethora of applications, including data analysis tools, scripts and software written in any programming language, graphical tools, interactive tools, client-server applications (including databases), Jupyter notebooks, and more!</p>
 
-        <p>ReproZip works by tracing the systems calls used by the experiment to automatically identify which files should be included. Users can review and edit this list and the metadata before creating the final package file. Packages can be reproduced in different ways, including chroot environments, <a href="https://www.vagrantup.com/">Vagrant</a>-built virtual machines, and <a href="https://www.docker.com/">Docker</a> containers; more can be added through plugins. We are in the process of merging in a new unpacker for <a href="https://www.sylabs.io/docs/">Singularity</a> right now!</p><br/><br/>
+        <p>ReproZip works by tracing the systems calls used by the experiment to automatically identify which files should be included. Users can review and edit this list and the metadata before creating the final package file. Packages can be reproduced in different ways, including chroot environments, <a href="https://www.vagrantup.com/">Vagrant</a>-built virtual machines, and <a href="https://www.docker.com/">Docker</a> containers; more can be added through plugins. We are in the process of merging in a new unpacker for <a href="https://sylabs.io/docs/">Singularity</a> right now!</p><br/><br/>
 
         <p>You can also view a few playlists we've compiled that demo how to pack and unpack different applications with ReproZip:</p>
 
