Use mfr.osf.io links on schol.html

--- a/schol.html
+++ b/schol.html
@@ -130,7 +130,7 @@
         R. Rampin, F. Chirigati, D. Shasha, J. Freire, and V. Steeves.
         In Journal of Open Source Software (JOSS), 2016</p>
 
-        <p id="sigmod-demo-2016"><i><a href="https://osf.io/vc72z/" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
+        <p id="sigmod-demo-2016"><i><a href="https://mfr.osf.io/render?url=https://osf.io/vc72z/?action=download%26mode=render" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
         F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
         In Proceedings of the 2016 ACM SIGMOD International Conference on Management of Data (SIGMOD), pp. 2085-2088, 2016</p>
 
@@ -158,12 +158,12 @@
 
         <h4>2018</h4>
 
-        <p><i><a href="https://osf.io/6hvpt/" target="_blank" rel="noopener"> Best practices for reproducible research using ReproZip</a></i>,
+        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/6hvpt/?action=download%26mode=render" target="_blank" rel="noopener"> Best practices for reproducible research using ReproZip</a></i>,
         <a href="https://www.cfa.harvard.edu/" target="_blank" rel="noopener">Harvard-Smithsonian Center for Astrophysics</a>,
         presented by Vicky Steeves,
         Cambridge, Massachusetts, October 2018.</p>
 
-        <p><i><a href="https://osf.io/tavwn/" target="_blank" rel="noopener">Reproducing & Archiving Scholarship with ReproZip</a></i>,
+        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/tavwn/?action=download%26mode=render" target="_blank" rel="noopener">Reproducing & Archiving Scholarship with ReproZip</a></i>,
         <a href="https://presqt.crc.nd.edu/index.php/workshops/implementation-kickoff-meeting" target="_blank" rel="noopener">PresQT Kickoff Workshop</a>,
         presented by Vicky Steeves,
         Notre Dame University, South Bend, Indiana, September 2018.</p>
@@ -219,7 +219,7 @@
 
         <h4>2015</h4>
 
-        <p><i><a href="https://osf.io/re437/" target="_blank" rel="noopener">Achieving Reproducibility with ReproZip</a></i>,
+        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/re437/?action=download%26mode=render" target="_blank" rel="noopener">Achieving Reproducibility with ReproZip</a></i>,
         CS Colloquium/Tutorial, Columbia University,
         presented by Fernando Chirigati and R&eacute;mi Rampin,
         New York City, NY, October 2015.</p>
@@ -234,12 +234,12 @@
         presented by Dennis Shasha,
         New York City, NY, October 2015.</p>
 
-        <p><i><a href="https://osf.io/dmbwk/" target="_blank" rel="noopener">Facilitating Reproducibility After the Fact</a></i>,
+        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/dmbwk/?action=download%26mode=render" target="_blank" rel="noopener">Facilitating Reproducibility After the Fact</a></i>,
         BIDS Reproducibility Conference, University of California, Berkeley,
         presented by Fernando Chirigati,
         Berkeley, CA, May 2015.</p>
 
-        <p><i><a href="https://osf.io/a85kx/" target="_blank" rel="noopener">Facilitating Reproducibility After the Fact</a></i>,
+        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/a85kx/?action=download%26mode=render" target="_blank" rel="noopener">Facilitating Reproducibility After the Fact</a></i>,
         Reproducibility Seminar, University of Washington,
         presented by Fernando Chirigati
         [<a href="https://uw.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank" rel="noopener">video</a>],
@@ -291,7 +291,7 @@
 
         <h4>2018</h4>
 
-        <p><i><a href="https://osf.io/xafsg/" target="_blank" rel="noopener">ReproServer: Making Reproducibility Easier and Less Intrusive</a></i>,
+        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/xafsg/?action=download%26mode=render" target="_blank" rel="noopener">ReproServer: Making Reproducibility Easier and Less Intrusive</a></i>,
         F. Chirigati, R. Rampin, V. Steeves, and J. Freire.
         MSDSE Summit, 2018</p>
 
@@ -301,7 +301,7 @@
 
         <h4>2017</h4>
 
-        <p><i><a href="https://osf.io/2shjg/" target="_blank" rel="noopener">Easily Reproducing Jupyter Notebooks with ReproZip</a></i>,
+        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/2shjg/?action=download%26mode=render" target="_blank" rel="noopener">Easily Reproducing Jupyter Notebooks with ReproZip</a></i>,
         F. Chirigati, R. Rampin, V. Steeves, D. Shasha, and J. Freire.
         MSDSE Summit, 2017</p>
 
@@ -311,11 +311,11 @@
         F. Chirigati, R. Rampin, V. Steeves, D. Shasha, and J. Freire.
         MSDSE Summit, 2016</p>
 
-        <p><i id="sigmod-poster-2016"><a href="https://osf.io/jnksd/" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
+        <p><i id="sigmod-poster-2016"><a href="https://mfr.osf.io/render?url=https://osf.io/jnksd/?action=download%26mode=render" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
         F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
         International Conference on Management of Data (SIGMOD), 2016</p>
 
-        <p><i id="force2016"><a href="https://osf.io/z5r43/" target="_blank" rel="noopener">Enhancing Scholarly Communication with ReproZip</a></i>,
+        <p><i id="force2016"><a href="https://mfr.osf.io/render?url=https://osf.io/z5r43/?action=download%26mode=render" target="_blank" rel="noopener">Enhancing Scholarly Communication with ReproZip</a></i>,
         F. Chirigati, R. Rampin, V. Steeves, D. Shasha, and J. Freire.
         FORCE2016 Conference, 2016</p>
 
