Update reproserver link: point to system

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="card">
           <div class="card-body">
             <h3 class="card-title">No lock-in</h3>
-            <p class="card-text">ReproZip works locally on your computer, server, or high performance computing clusters. Once you make an <code>.rpz</code> bundle, you can reproduce it with a variety of unpacker plug-ins (e.g. Docker, Vagrant, Singularity) or in the cloud with <a href="https://github.com/VIDA-NYU/reproserver">ReproServer</a>.</p>
+            <p class="card-text">ReproZip works locally on your computer, server, or high performance computing clusters. Once you make an <code>.rpz</code> bundle, you can reproduce it with a variety of unpacker plug-ins (e.g. Docker, Vagrant, Singularity) or in the cloud with <a href="https://server.reprozip.org/">ReproServer</a>.</p>
           </div>
           <div class="card-footer">
             <a class="btn btn-outline-primary" href="https://docs.reprozip.org/en/1.0.x/install.html" role="button"> Try out ReproZip today &raquo;</a>
