Fix OSF MFR links

--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
 
         <p>The bibtex for this citation can be found here: <a href="https://github.com/VIDA-NYU/reprozip/blob/master/CITATION.txt">https://github.com/VIDA-NYU/reprozip/blob/master/CITATION.txt</a>.</p>
 
-        <p>A preprint version of this paper is available <a href="https://osf.io/vc72z/">here</a>. For a complete list of publications, posters, and presentations, please visit the <a href="schol.html" rel="noopener">Scholarship</a> page. To reference our website, please use <a href="https://www.reprozip.org/" rel="noopener">https://www.reprozip.org</a>.</p>
+        <p>A preprint version of this paper is available <a href="https://mfr.osf.io/render?url=https://osf.io/vc72z/?action=download%26mode=render" target="_blank" rel="noopener">here</a>. For a complete list of publications, posters, and presentations, please visit the <a href="schol.html" rel="noopener">Scholarship</a> page. To reference our website, please use <a href="https://www.reprozip.org/" rel="noopener">https://www.reprozip.org</a>.</p>
 
         <br/>
         <div id="contact"><h2>Contact Us</h2></div>
