--- a/schol.html
+++ b/schol.html
@@ -158,12 +158,12 @@
 
         <h4>2018</h4>
 
-        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/6hvpt/?action=download%26mode=render" target="_blank" rel="noopener"> Best practices for reproducible research using ReproZip</a></i>,
+        <p><i><a href="https://osf.io/6hvpt" target="_blank" rel="noopener"> Best practices for reproducible research using ReproZip</a></i>,
         <a href="https://www.cfa.harvard.edu/" target="_blank" rel="noopener">Harvard-Smithsonian Center for Astrophysics</a>,
         presented by Vicky Steeves,
         Cambridge, Massachusetts, October 2018.</p>
 
-        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/tavwn/?action=download%26mode=render" target="_blank" rel="noopener">Reproducing & Archiving Scholarship with ReproZip</a></i>,
+        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/h6rpu/?action=download%26mode=render" target="_blank" rel="noopener">Reproducing & Archiving Scholarship with ReproZip</a></i>,
         <a href="https://presqt.crc.nd.edu/index.php/workshops/implementation-kickoff-meeting" target="_blank" rel="noopener">PresQT Kickoff Workshop</a>,
         presented by Vicky Steeves,
         Notre Dame University, South Bend, Indiana, September 2018.</p>
@@ -185,7 +185,7 @@
         presented by Vicky Steeves and R&eacute;mi Rampin,
         University of Notre Dame, May 2017.</p>
 
-        <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/hzj5g/?action=download%26mode=render" target="_blank" rel="noopener">ReproZip for Geospatial Research</a></i>,
+        <p><i><a href="https://docs.google.com/presentation/d/1gYrsJXCyGP4Pwx6gHmHoQFluvmymzC3CrpsqbUjHD7k/edit" target="_blank" rel="noopener">ReproZip for Geospatial Research</a></i>,
         <a href="http://egu2017.eu/home.html" target="_blank">European Geosciences Union (EGU) General Assembly</a>,
         presented by R&eacute;mi Rampin and Vicky Steeves,
         Vienna, Austria, April 2017.</p>
