--- a/schol.html
+++ b/schol.html
@@ -191,7 +191,7 @@
         Vienna, Austria, April 2017.</p>
 
         <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/7qmsa/?action=download%26mode=render" target="_blank" rel="noopener">Preserving and Reproducing Research with ReproZip</a></i>,
-        <a href="http://www.brainhack.org/global2017/index.html#details" target="_blank">Brainhack NYC</a>,
+        <a href="https://www.brainhack.org/global2017/index.html#details" target="_blank">Brainhack NYC</a>,
         presented by Fernando Chirigati,
         New York City, NY, March 2017.</p>
 
