--- a/schol.html
+++ b/schol.html
@@ -190,7 +190,7 @@
         Vienna, Austria, April 2017.</p>
 
         <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/7qmsa/?action=download%26mode=render" target="_blank" rel="noopener">Preserving and Reproducing Research with ReproZip</a></i>,
-        <a href="https://www.brainhack.org/global2017/index.html#details" target="_blank">Brainhack NYC</a>,
+        <a href="https://brainhack.org/global2017/index.html#details" target="_blank">Brainhack NYC</a>,
         presented by Fernando Chirigati,
         New York City, NY, March 2017.</p>
 
@@ -206,7 +206,7 @@
         presented by Juliana Freire,
         Rutgers University, October 2016.</p>
 
-        <p><i><a href="https://drive.google.com/file/d/0B6FhhXhXzfj_dXZjTXFYam9mVjQ/view?usp=sharing" target="_blank" rel="noopener">ReproZip: Reproducibility with Ease</a></i>,
+        <p><i><a href="https://drive.google.com/file/d/0B6FhhXhXzfj_dXZjTXFYam9mVjQ/view" target="_blank" rel="noopener">ReproZip: Reproducibility with Ease</a></i>,
         Workshop on Container Strategies for Data and Software Preservation that Promote Open Science,
         presented by R&eacute;mi Rampin and Vicky Steeves,
         University of Notre Dame, May 2016.</p>
@@ -240,8 +240,7 @@
 
         <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/a85kx/?action=download%26mode=render" target="_blank" rel="noopener">Facilitating Reproducibility After the Fact</a></i>,
         Reproducibility Seminar, University of Washington,
-        presented by Fernando Chirigati
-        [<a href="https://uw.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank" rel="noopener">video</a>],
+        presented by Fernando Chirigati,
         Seattle, WA, May 2015.</p>
 
         <p><i><a href="https://cs.nyu.edu/cs/faculty/shasha/papers/shasha_digicosme.pptx" target="_blank" rel="noopener">Computational Reproducibility: Why Needed, First Tools, Open Problems</a></i>,
