--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
                 <td><a href="http://fchirigati.com/"><img src="imgs/fernando.jpg" alt="Fernando Chirigati"/><p>Fernando Chirigati</p></a></td>
               </tr>
               <tr>
-                <td><a href="https://vickysteeves.com"><img src="imgs/vicky.jpg" alt="Vicky Steeves"/><p>Vicky Steeves</p></a></td>
+                <td><a href="https://vickysteeves.com"><img src="imgs/vicky.jpg" alt="Vicky Rampin"/><p>Vicky Rampin</p></a></td>
                 <td><a href="https://www.linkedin.com/in/binalmodi/"><img src="imgs/binal.jpg" alt="Binal Modi"/><p>Binal Modi</a><br/>(summer & fall 2018)</p></td>
                 <td><a href="https://www.linkedin.com/in/khushnaseeb-ali-96119a45/"><img src="imgs/khushnaseeb.png" alt="Khushnaseeb Ali"/><p>Khushnaseeb Ali</a><br/>(summer 2018)</p></td>
                 <td><a href="https://www.linkedin.com/in/heng2j"><img src="imgs/heng.jpg" alt="Heng Li"/><p>Zhonheng Li</a><br/>(summer 2017)</p></td>
