--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
         <br/>
         <div id="contact"><h2>Contact Us</h2></div>
 
-        <p>If you'd like to give us feedback, ask questions, or report concerns and issues about ReproZip, you can either open an issue on <a href="https://github.com/VIDA-NYU/reprozip">GitHub</a> or email us at <a href="https://vgc.poly.edu/mailman/listinfo/reprozip-users">users@reprozip.org</a>. If you'd like to contribute your use of ReproZip to our <a href="">examples website</a>, you can also use the <a href="https://vgc.poly.edu/mailman/listinfo/reprozip-users">mailing list</a> or the <a href="https://github.com/VIDA-NYU/reprozip-examples">reprozip-examples</a> repository.</p>
+        <p>If you'd like to give us feedback, ask questions, or report concerns and issues about ReproZip, you can either open an issue on <a href="https://github.com/VIDA-NYU/reprozip">GitHub</a> or use the mailing-list <a href="https://groups.google.com/a/nyu.edu/g/reprozip">reprozip@.nyu.edu</a>. You can also contribute your use of ReproZip to our <a href="https://github.com/VIDA-NYU/reprozip-examples">reprozip-examples</a> repository.</p>
 
         <br/>
         <div id="contribute"><h2>Contribute to ReproZip!</h2></div>
