Fix link to scipy2017, link to the Wayback Machine

--- a/schol.html
+++ b/schol.html
@@ -170,7 +170,7 @@
         <h4>2017</h4>
 
         <p><i><a href="https://vickysteeves.gitlab.io/2017-SciPy/" target="_blank" rel="noopener">Creating Reproducible Experiments with ReproZip</a></i>,
-        <a href="https://scipy2017.scipy.org" target="_blank" rel="noopener">SciPy 2017</a>,
+        <a href="http://web.archive.org/web/20181010004231/https://scipy2017.scipy.org/ehome/index.php?eventid=220975" target="_blank" rel="noopener">SciPy 2017</a>,
         presented by Vicky Steeves and R&eacute;mi Rampin,
         Austin, Texas, July 2017.</p>
 
