--- a/schol.html
+++ b/schol.html
@@ -212,7 +212,7 @@
         University of Notre Dame, May 2016.</p>
 
         <p><i>ReproZip: Computational Reproducibility with Ease</i>,
-        <a href="https://www.dagstuhl.de/de/programm/kalender/semhp/?semnr=16041" target="_blank" rel="noopener">Dagstuhl Seminar 16041</a>, Reproducibility of Data-Oriented Experiments in e-Science,
+        <a href="https://www.dagstuhl.de/de/seminars/seminar-calendar/seminar-details/16041" target="_blank" rel="noopener">Dagstuhl Seminar 16041</a>, Reproducibility of Data-Oriented Experiments in e-Science,
         presented by Fernando Chirigati,
         Wadern, Germany, January 2016.</p>
 
