Change dead links to conferences to Web Archive

--- a/schol.html
+++ b/schol.html
@@ -175,7 +175,7 @@
         Austin, Texas, July 2017.</p>
 
         <p><i><a href="https://vickysteeves.gitlab.io/2017-IASSIST-ReproZip/" target="_blank" rel="noopener">Reproducing and Preserving Research with ReproZip</a></i>,
-        <a href="http://www.iassist2017.org/" target="_blank" rel="noopener">IASSIST 2017</a>,
+        <a href="http://web.archive.org/web/20170715095424/http://www.iassist2017.org/" target="_blank" rel="noopener">IASSIST 2017</a>,
         presented by Vicky Steeves and R&eacute;mi Rampin,
         Lawrence, Kansas, May 2017.</p>
 
@@ -197,7 +197,7 @@
         <h4>2016</h4>
 
         <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/qbu6s/?action=download%26mode=render" target="_blank" rel="noopener">Preserving and Reproducing Research with ReproZip</a></i>,
-        Preservation and Archiving Special Interest Group (PASIG), <a href="https://library.stanford.edu/projects/preservation-and-archiving-special-interest-group/international-meetings/october-2016-new" target="_blank">Fall 2016 Meeting</a>,
+        Preservation and Archiving Special Interest Group (PASIG), <a href="http://web.archive.org/web/20230728203500/https://library.stanford.edu/projects/preservation-and-archiving-special-interest-group/international-meetings/october-2016-new" target="_blank">Fall 2016 Meeting</a>,
         presented by Fernando Chirigati,
         New York City, NY, October 2016.</p>
 
